--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
                         </div>
 
                             <div>
-                                <legend>
-                                    <h2> Result: </h2>
-                                </legend>
+                                <label style="font-size: 2em;"><strong> Result </strong></label>
                                     <p id="cubic_ft"></p>
                                     <p id="cubic_yd"></p>
                             </div>
@@ -57,8 +55,8 @@
                             </div>
 
                             <button value="submit" type="button" onclick="volume()"> Calculate </button>
+                        </fieldset>
                     </form>
-                </fieldset>
             </div>
 
         </main>
